logs/arsenic.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/arsenic'...
Compiling './lib/python3.5/site-packages/arsenic/actions.py'...
***   File "./lib/python3.5/site-packages/arsenic/actions.py", line 19
    self.actions: Dict['Device', 'Action'] = {
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/connection.py'...
***   File "./lib/python3.5/site-packages/arsenic/connection.py", line 62
    safe_netloc = f'{safe_netloc}:{pr.port}'
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arsenic/engines'...
Compiling './lib/python3.5/site-packages/arsenic/engines/__init__.py'...
***   File "./lib/python3.5/site-packages/arsenic/engines/__init__.py", line 17
    data: Dict[str, str] = attr.ib(convert=lowercase_dict, default=attr.Factory(dict))
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/errors.py'...
***   File "./lib/python3.5/site-packages/arsenic/errors.py", line 32
    CODES: Dict[Union[str, int], Type[WebdriverError]] = {}
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/http.py'...
***   File "./lib/python3.5/site-packages/arsenic/http.py", line 20
    raw_token = f'{self.username}:{self.password}'
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/services.py'...
***   File "./lib/python3.5/site-packages/arsenic/services.py", line 131
    f'Geckodriver version {version_str} is too old. 0.16.1 or '
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/session.py'...
***   File "./lib/python3.5/site-packages/arsenic/session.py", line 22
    result.append(f'"{part}"')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/utils.py'...
***   File "./lib/python3.5/site-packages/arsenic/utils.py", line 20
    raise ValueError(f'{original!r} is not an int or <int>px value')
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arsenic/webdriver.py'...
***   File "./lib/python3.5/site-packages/arsenic/webdriver.py", line 18
    self.session: Session = None
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arsenic-1.0.0.dev7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/structlog'...
Listing './lib/python3.5/site-packages/structlog-17.2.0.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
